--- a/style.css
+++ b/style.css
@@ -284,13 +284,13 @@ video {
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 73vh;
+    height: 80vh;
     background: url(https://files.uxpin.com/homepage/videos/home-header.mp4) no-repeat center center/cover;
   }
 
   .overlay {
     width: 100%;
-    height: 73vh;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -298,10 +298,123 @@ video {
     background-size: 3px 3px;
     z-index: 2;
   }
- 
+  section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  
+div.cookies {
+  position:fixed; 
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  padding: 10px 0;
+  color: #fff;
+  font-size: 12px;
+  line-height: 16px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: rgba(0,74,151,0.9);
+}
+div.cookies .container {
+  position: relative;
+}
+@media only screen and (min-width: 1025px) {
+  div.cookies .container {
+    height: 40px;
+  }
+}
+div.cookies .container div {
+  padding-left: 60px;
+  padding-right:10px;
+}
+div.cookies a {
+  color: #fff;
+  text-decoration:underline;
+  border:none;
+}
+div.cookies a.close-cookie-warning {
+  position: absolute;
+  left: 15px;
+  top: 0;
+  display: block;
+  background-color: rgb(0,74,151);
+  color: #fff;
+  height: 100%;
+    display: flex;
+    align-items: center;
+  padding: 9px 5px;
+  cursor: pointer;
+  font-size: 2rem;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border:none;
+  text-decoration: none;
+}
+div.cookies a.close-cookie-warning:hover {
+  background-color: #fff;
+  color:rgb(47,153,205);
+  border-bottom:none;
+}
+@media only screen and (max-width: 767px) {
+.mobile-hidden {
+  display:none;
+  }
+}
+  
+  #section05 a {
+    padding-top: 70px;
+  }
+  #section05 a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #000;
+    border-bottom: 1px solid #000;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb05 1.5s infinite;
+    animation: sdb05 1.5s infinite;
+    box-sizing: border-box;
+  }
+  @-webkit-keyframes sdb05 {
+    0% {
+      -webkit-transform: rotate(-45deg) translate(0, 0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+      opacity: 0;
+    }
+  }
+  @keyframes sdb05 {
+    0% {
+      transform: rotate(-45deg) translate(0, 0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      transform: rotate(-45deg) translate(-20px, 20px);
+      opacity: 0;
+    }
+  }
   
   
-  
+
+
   .footer-distributed {
     background-color: #292c2f;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
