--- a/style.css
+++ b/style.css
@@ -280,11 +280,28 @@ video {
     margin: 0;
     padding: 0;
   }
+  label {
+    position: relative;
+    display: flex;
+  }
+  
+  label:before {
+    content: "";
+    position: absolute;
+    left: 10px;
+    top: 0;
+    bottom: 0;
+    width: 20px;
+    background: url('https://api.iconify.design/feather-mail.svg') no-repeat center center / contain;  }
+  
+  input {
+    padding: 6px 40px 8px !important;
+  }
   .bg-video-wrap {
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 80vh;
+    height: 550px;
     background: url(https://files.uxpin.com/homepage/videos/home-header.mp4) no-repeat center center/cover;
   }
 
