--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ video {
 
   .overlay {
     width: 100%;
-    height: 100%;
+    height: 550px;
     position: absolute;
     top: 0;
     left: 0;
