--- a/style.css
+++ b/style.css
@@ -307,13 +307,12 @@ video {
 
   .overlay {
     width: 100%;
-    height: 550px;
-    position: absolute;
+    height: 100%;
+    position: relative;
     top: 0;
     left: 0;
-    background-image: linear-gradient(45deg, rgba(0,0,0,.5) 20%, rgba(0,0,0,.8) 50%);
-    background-size: 3px 3px;
-    z-index: 2;
+    background-image: linear-gradient(45deg, rgba(0,0,0,0.9) 10%, rgba(0,0,0,1) 99%);
+    z-index: 3;
   }
   section {
     position: relative;
